--- a/css/styles.css
+++ b/css/styles.css
@@ -1,63 +1,3 @@
-:root {
-    --iris: #4D5AE5;
-    --ocean: #404BBF;
-    --navy-blue: #2E2F42;
-    --slate: #434455;
-    --white: #FFFFFF;
-    --cloud: #F4F4FD;
-    --cornflower: #E7E9FC;
-    --light-slate: #8E8F99;
-    --green: #31D0AA;
-    --modal-bg: rgba(46, 47, 66, 0.40);
-    --dairy: #FCFCFC
-}
-
-
-h1, h2, h3, h4, h5, h6, p {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-}
-
-img {
-    display: block;
-}
-
-.list {
-    list-style: none;
-}
-
-.link {
-    text-decoration: none;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-    color: var(--slate);
-    background-color: var(--white)
-}
-
-
-
-/* ===================== Start Common components  ============ */
-.container {
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.section {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -72,80 +12,125 @@ body {
     overflow: hidden;
 }
 
-.menu-link.active-link {
-    color: var(--ocean);
+
+
+/* ===================== Start Common components  ============ */
+
+
+
+
+
+@media screen and (min-width:428px) {
+    .container {
+        width: 428px;
+    }
 }
 
-.active-link::after {
-    content: "";
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-
-    display: block;
-    width: 100%;
-    height: 4px;
-
-    background-color: var(--ocean);
-    border-radius: 2px;
-
+@media screen and (min-width:768px) {
+    .container {
+        width: 768px;
+    }
 }
 
-.button {
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: var(--iris);
-    background-color: var(--cloud);
-    cursor: pointer;
-    border-radius: 4px;
-    border: none;
-
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width:1158px) {
+    .container {
+        width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
-.button:hover,
-.button:focus {
-    background-color: var(--ocean);
-    color: var(--white);
+@media (min-width:768px) {
+    .active-link::after {
+        content: "";
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+
+        display: block;
+        width: 100%;
+        height: 4px;
+
+        background-color: var(--ocean);
+        border-radius: 2px;
+
+    }
+
+    .menu-link {
+        display: block;
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
 }
+
+.section {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+
+@media (min-width:1158px) {
+    .section {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+}
+
 
 .title {
     margin-bottom: 8px;
+    text-align: center;
 
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
     color: var(--navy-blue);
+}
 
+@media (min-width:768px) {
+    .title {
+        margin-bottom: 8px;
+    }
+}
 
+@media (min-width:1158px) {
+    .title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+    }
 }
 
 .subtitle,
 .description {
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--slate)
+
+    color: var(--slate);
+}
+
+@media (min-width:1158px) {
+
+    .subtitle,
+    .description {
+        font-weight: normal;
+    }
 }
 
 .section-title {
+    text-align: center;
     margin-bottom: 72px;
 
-    font-weight: 700;
     font-size: 36px;
+    font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-align: center;
     text-transform: capitalize;
     color: var(--navy-blue);
-
-
 
 }
 
@@ -174,6 +159,7 @@ body {
     fill: currentColor;
 }
 
+
 /* ===================== End Common components  ============= */
 
 /* ====================== Start Header =======================*/
@@ -182,50 +168,45 @@ body {
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
+@media screen and (max-width:767px) {
+    .header {
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
+}
+
+
+
 .flex-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.logo {
-    margin-right: 76px;
-
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--iris);
-
-
-}
-
-.decor {
-    color: var(--navy-blue);
-}
-
-.page-nav {
-    display: flex;
-    align-items: center;
+@media screen and (min-width:768px) {
+    .logo {
+        margin-right: 120px;
+    }
 }
 
 .menu {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+@media screen and (max-width:768px) {
+    .menu-item:not(:last-child) {
+        margin-bottom: 40px;
+    }
 }
 
 
-.menu-item:not(:last-child) {
-    margin-right: 40px;
-}
 
 .menu-link {
     position: relative;
     display: inline-block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -241,21 +222,25 @@ body {
     color: var(--ocean);
 }
 
-
-.contacts {
+.page-nav {
     display: flex;
-
-    font-style: normal;
+    align-items: center;
+    justify-content: center;
 }
 
-.contacts-item:not(:last-child) {
-    margin-right: 40px;
+@media screen and (min-width:768px) and (max-width:1157px) {
+    .contacts {
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
 }
 
 .contacts-link {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     color: var(--slate);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
@@ -266,14 +251,33 @@ body {
     color: var(--ocean);
 }
 
+@media screen and (min-width:1158px) {
+    .contacts {
+        display: flex;
+        gap: 40px
+    }
+
+    .contacts-link {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+}
+
+/*
+
+
+
+
+
+ */
+
 /* ====================== End Header =======================*/
 
 /* ====================== Start Hero ===================== */
 .hero {
-    padding: 188px 0;
-    max-width: 1440px;
+    padding: 112px 54px;
     margin: 0 auto;
-
     text-align: center;
     background-color: var(--navy-blue);
     background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-bg.jpg);
@@ -282,18 +286,46 @@ body {
     background-position: center;
 }
 
+.hero {
+    padding: 188px 0;
+    max-width: 1440px;
+}
+
 .hero-title {
-    max-width: 496px;
+    max-width: 320px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 48px;
+    margin-bottom: 72px;
+    text-align: center;
 
+    font-size: 36px;
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    line-height: 1.11;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
+
     color: var(--white);
+
 }
+
+@media (min-width: 768px) {
+    .hero-title {
+        max-width: 496px;
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 36px;
+    }
+}
+
+@media (min-width: 1158px) {
+    .hero-title {
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 48px;
+    }
+}
+
+
 
 .hero-button {
     display: block;
@@ -313,28 +345,50 @@ body {
 
 
 /* =====================  Start Advantages  ================= */
-.advantages-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
-}
+@media(max-width:767px) {
+    .advantages-item:not(:last-child) {
+        margin-bottom: 72px;
+    }
 
-.advantages-item {
-    width: calc((100% - 72px)/4);
 }
 
 .advantages-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border-radius: 4px;
-    width: 264px;
-    height: 112px;
-    margin-bottom: 8px;
-    background-color: var(--cloud);
+    display: none;
 }
 
+@media (min-width:768px) {
+    .advantages-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+    }
+
+    .advantages-item {
+        width: calc((100% - 24px)/2);
+    }
+}
+
+@media (min-width:1158px) {
+    .advantages-list {
+        gap: 24px;
+    }
+
+    .advantages-item {
+        width: calc((100% - 72px)/4);
+    }
+
+    .advantages-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+        margin-bottom: 8px;
+        background-color: var(--cloud);
+    }
+}
 
 
 /* =======================  End Advantages  ================= */
@@ -342,19 +396,33 @@ body {
 
 
 /* ======================= Start Work  ======================= */
-.work {
-    padding-top: 0;
+
+@media (max-width:1157px) {
+    .work {
+        display: none;
+    }
 }
 
-.work-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px
+@media (min-width:1158px) {
+    .work {
+        padding-top: 0;
+    }
+
+    .work-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 24px
+    }
+
+    .work-item {
+        width: calc((100% - 48px)/3);
+    }
+
 }
 
-.work-item {
-    width: calc((100% - 48px)/3);
-}
+
+
+
 
 
 /* ======================= End  Work  ======================= */
@@ -364,20 +432,22 @@ body {
     background-color: var(--cloud);
 }
 
-.team-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px
-}
-
 .team-item {
     background-color: var(--white);
     border-radius: 0px 0px 4px 4px;
-    width: calc((100% - 72px)/4);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
+.team-name {
+    text-align: center;
 
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--navy-blue);
+
+}
 
 .team-content {
     padding: 32px 16px;
@@ -388,6 +458,35 @@ body {
     margin-bottom: 8px;
 }
 
+.team-position.subtitle {
+    font-weight: normal;
+}
+
+@media (max-width:767px) {
+    .team-item:not(:last-child) {
+        margin-bottom: 72px;
+    }
+
+    .team-item {
+        width: 264px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
+
+@media (min-width:768px) {
+    .team-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 64px 24px;
+    }
+
+
+}
+
 .social-list {
     display: flex;
     align-items: center;
@@ -396,22 +495,21 @@ body {
 }
 
 
-
 /* ====================== End Team  =========================== */
 
 /* ====================== Start Customers  ======================== */
 .customers-list {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 24px;
-
+    gap: 72px 16px;
 }
 
 .customers-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 168px;
+    width: 190px;
     height: 88px;
 
     border-radius: 4px;
@@ -431,6 +529,18 @@ body {
     fill: currentColor;
 }
 
+@media (min-width:768px) {
+
+    .customers-list {
+        column-gap: 24px;
+        justify-content: center;
+    }
+
+    .customers-link {
+        width: 168px;
+    }
+}
+
 
 
 /* ====================== End Customers  ======================== */
@@ -438,69 +548,63 @@ body {
 
 /* ====================== Start Footer  ====================== */
 .footer {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 96px;
+    padding-bottom: 96px;
     background-color: var(--navy-blue);
 }
 
-.footer-description {
-    max-width: 264px;
-    color: var(--cloud);
+@media(min-width:768px) {
+    .footer {
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
 }
 
-.logo-footer {
-    display: inline-block;
-    margin-bottom: 16px;
-    margin-right: 0;
+@media(min-width:1158px) {
+    .footer {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
 }
+
+
 
 .logo-footer .decor {
     color: var(--cloud);
 }
 
-.footer-flex {
-    display: flex;
-    align-items: baseline;
+.footer-wrapper {
+    text-align: center;
 }
 
-.footer-wrapper {
-    margin-right: 120px;
+.footer-description {
+    max-width: 268px;
+    margin: 16px auto 72px;
+    color: var(--cloud);
+    font-weight: normal;
 }
 
 .footer-social {
     margin-bottom: 16px;
-
-    font-weight: 500;
     color: var(--white);
-
+    text-align: center;
 }
 
 .footer-social-list {
     gap: 16px;
+    margin-bottom: 72px;
 }
-
-
 
 .footer-social-link:hover,
 .footer-social-link:focus {
     background-color: var(--green);
 }
 
-
-.subscribe-wrapper {
-    margin-left: 80px;
-}
-
-.subscribe-form {
-    display: flex;
-    align-items: center;
-    gap: 24px;
-}
-
 .subscribe-text {
     color: var(--white);
     margin-bottom: 16px;
     font-weight: 500;
+    text-align: center;
 }
 
 .subscribe-input {
@@ -509,20 +613,21 @@ body {
     line-height: 1.5;
     letter-spacing: 0.04em;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    width: 264px;
+    width: 398px;
     height: 40px;
     padding: 8px 16px;
     border-radius: 4px;
-    border: 1px solid var(--white);
+    border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: var(--white);
+    margin-bottom: 16px;
 }
 
 .subscribe-input::placeholder {
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    color: var(--white);
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .subscribe-button {
@@ -541,12 +646,55 @@ body {
     margin-left: 16px;
 }
 
+.subscribe-button {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*
+
+
+
+
+
+
+
+.footer-flex {
+    display: flex;
+    align-items: baseline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.subscribe-wrapper {
+    margin-left: 80px;
+}
+
+.subscribe-form {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+
+
+ */
+
 /* ====================== End Footer  ======================== */
 
 
 /* ======================= Start Portfolio =================== */
 
-.portfolio {
+/* .portfolio {
     padding-top: 96px;
 }
 
@@ -629,13 +777,13 @@ body {
     padding: 32px 16px;
     border: 1px solid var(--cornflower);
     border-top: 0;
-}
+} */
 
 /* ======================= End Portfolio ====================== */
 
 /* ======================= Start Modal ======================= */
 
-.backdrop {
+/* .backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -869,8 +1017,161 @@ body {
     color: var(--white);
     background-color: var(--iris);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 
 
 /* ======================= End  Modal ======================= */
+
+/* ===================== Start  mobile-menu  ================ */
+
+
+
+
+
+
+.burger-icon {
+    fill: var(--navy-blue);
+    stroke: var(--navy-blue);
+}
+
+.js-open-menu.menu-toggle {
+    position: absolute;
+    top: 0px;
+    right: 16px;
+}
+
+.js-open-menu:hover .burger-icon,
+.js-open-menu:focus {
+    fill: var(--ocean);
+    stroke: var(--ocean);
+}
+
+.menu-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+
+@media screen and (max-width:767px) {
+    .menu {
+        display: none;
+    }
+
+    .contacts {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 80px 35px 40px 40px;
+    background-color: var(--white);
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+
+
+
+.mobile-menu .menu-link {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--navy-blue);
+}
+
+.mobile-menu .active-link {
+    color: var(--ocean)
+}
+
+
+.mobile-menu-list {
+    margin-bottom: 284px;
+}
+
+.contacts-mobile-list .contacts-phone-link {
+    display: block;
+    margin-bottom: 40px;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--iris, #4D5AE5);
+}
+
+.contacts-mobile-list .contacts-mail-link {
+    display: block;
+    margin-bottom: 48px;
+
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--slate);
+}
+
+.mobile-menu .social-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 328px;
+}
+
+.mobile-menu .social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--iris);
+    color: var(--cloud);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.mobile-menu .social-link:hover,
+.mobile-menu .social-link:focus {
+    background-color: var(--ocean);
+}
+
+
+.social-icon {
+    fill: currentColor;
+}
+
+
+/* ===================== End  mobile-menu    ================ */
