--- a/css/styles.css
+++ b/css/styles.css
@@ -16,25 +16,15 @@
 
 /* ===================== Start Common components  ============ */
 
-
-
-
-
-@media screen and (min-width:428px) {
-    .container {
-        width: 428px;
-    }
-}
-
 @media screen and (min-width:768px) {
     .container {
-        width: 768px;
+        max-width: 768px;
     }
 }
 
 @media screen and (min-width:1158px) {
     .container {
-        width: 1158px;
+        max-width: 1158px;
         padding-left: 15px;
         padding-right: 15px;
     }
@@ -196,7 +186,7 @@
     gap: 40px;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     .menu-item:not(:last-child) {
         margin-bottom: 40px;
     }
@@ -264,13 +254,6 @@
     }
 }
 
-/*
-
-
-
-
-
- */
 
 /* ====================== End Header =======================*/
 
@@ -280,11 +263,53 @@
     margin: 0 auto;
     text-align: center;
     background-color: var(--navy-blue);
-    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-bg.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-mobile-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-mobile-bg@2x.jpg);
+
+    }
+}
+
+@media screen and (min-width:768px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-tablet-bg.jpg);
+
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        .hero {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-tablet-bg@2x.jpg);
+
+        }
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-desktop-bg.jpg);
+
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        .hero {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero-desktop-bg@2x.jpg);
+
+        }
+    }
+}
+
 
 .hero {
     padding: 188px 0;
@@ -422,9 +447,6 @@
 
 
 
-
-
-
 /* ======================= End  Work  ======================= */
 
 /* ====================== Start Team  ======================== */
@@ -438,7 +460,7 @@
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.team-name {
+.team-name, .portfolio-title {
     text-align: center;
 
     font-size: 20px;
@@ -573,8 +595,17 @@
     color: var(--cloud);
 }
 
-.footer-wrapper {
-    text-align: center;
+@media (min-width:768px) {
+    .logo-footer {
+        margin-right: 0;
+    }
+}
+
+@media (max-width:767px) {
+    .footer-wrapper {
+        text-align: center;
+    }
+
 }
 
 .footer-description {
@@ -584,16 +615,42 @@
     font-weight: normal;
 }
 
+@media(min-width:768px) {
+    .footer-description {
+        max-width: 264px
+    }
+}
+
+@media(min-width:1158px) {
+    .footer-description {
+        margin-bottom: 0;
+    }
+}
+
 .footer-social {
     margin-bottom: 16px;
     color: var(--white);
-    text-align: center;
 }
+
+@media (max-width:767px) {
+    .footer-social {
+        text-align: center;
+    }
+
+}
+
 
 .footer-social-list {
     gap: 16px;
     margin-bottom: 72px;
 }
+
+@media(min-width:1158px) {
+    .footer-social-list {
+        margin-bottom: 0;
+    }
+}
+
 
 .footer-social-link:hover,
 .footer-social-link:focus {
@@ -604,7 +661,13 @@
     color: var(--white);
     margin-bottom: 16px;
     font-weight: 500;
-    text-align: center;
+}
+
+@media (max-width:767px) {
+    .subscribe-text {
+        text-align: center;
+    }
+
 }
 
 .subscribe-input {
@@ -613,14 +676,21 @@
     line-height: 1.5;
     letter-spacing: 0.04em;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    width: 398px;
+    width: 100%;
     height: 40px;
     padding: 8px 16px;
     border-radius: 4px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: var(--white);
-    margin-bottom: 16px;
+
+}
+
+
+@media(min-width:768px) {
+    .subscribe-input {
+        width: 264px;
+    }
 }
 
 .subscribe-input::placeholder {
@@ -646,67 +716,112 @@
     margin-left: 16px;
 }
 
-.subscribe-button {
-    margin-left: auto;
-    margin-right: auto;
-}
+@media (max-width:767px) {
+    .subscribe-button {
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-/*
-
-
-
-
-
-
-
-.footer-flex {
-    display: flex;
-    align-items: baseline;
+    .subscribe-input {
+        margin-bottom: 16px;
+    }
 }
 
 
 
 
+@media (min-width:768px) {
+    .footer-tablet {
+        display: flex;
+        align-items: baseline;
+        gap: 24px;
+        justify-content: center;
+    }
 
+    .subscribe-form {
+        display: flex;
+        gap: 24px;
+        align-items: center;
+    }
 
-
-
-
-
-
-
-.subscribe-wrapper {
-    margin-left: 80px;
+    .subscribe-wrapper {
+        width: 453px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
-.subscribe-form {
-    display: flex;
-    align-items: center;
-    gap: 24px;
+@media (min-width:1158px) {
+    .footer-flex {
+        display: flex;
+    }
+
+    .footer-tablet {
+        gap: 120px;
+    }
+
+    .subscribe-wrapper {
+        margin-left: 80px;
+        margin-right: 0;
+    }
 }
 
-
-
- */
 
 /* ====================== End Footer  ======================== */
 
 
 /* ======================= Start Portfolio =================== */
 
-/* .portfolio {
-    padding-top: 96px;
+.portfolio {
+    padding-top: 48px;
 }
+
+
+@media screen and (min-width:768px) {
+    .portfolio {
+        padding-top: 64px;
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .portfolio {
+        padding-top: 100px;
+    }
+}
+
+
 
 .portfolio-filter {
     display: flex;
-    justify-content: center;
-    gap: 24px;
-    margin-bottom: 72px;
+    flex-wrap: wrap;
+    gap: 16px 24px;
+    margin-bottom: 48px;
+
+}
+
+@media screen and (max-width:767px) {
+    .portfolio-filter {
+        width: 268px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .portfolio-filter {
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+        margin-bottom: 64px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .portfolio-filter {
+        margin-bottom: 72px;
+    }
 }
 
 .portfolio-filter .button {
-    padding: 12px 24px;
+    padding: 8px 16px;
     border: 1px solid var(--cornflower);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
@@ -722,11 +837,29 @@
     display: flex;
     flex-wrap: wrap;
     row-gap: 48px;
-    column-gap: 24px;
 }
 
-.portfolio-item {
-    width: calc((100% - 48px)/3);
+@media screen and (min-width:768px) {
+    .portfolio-list {
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+
+    .portfolio-item {
+        width: calc((100% - 24px)/2);
+    }
+}
+
+
+
+@media screen and (min-width:1158px) {
+    .portfolio-list {
+        row-gap: 48px;
+    }
+
+    .portfolio-item {
+        width: calc((100% - 48px)/3);
+    }
 }
 
 .portfolio-image {
@@ -772,18 +905,26 @@
 }
 
 
-
 .portfolio-item-content {
     padding: 32px 16px;
     border: 1px solid var(--cornflower);
     border-top: 0;
-} */
+}
+
+.portfolio-title {
+    margin-bottom: 8px;
+    text-align: left;
+}
+
+.portfolio-subtitle {
+    font-weight: 400;
+}
 
 /* ======================= End Portfolio ====================== */
 
 /* ======================= Start Modal ======================= */
 
-/* .backdrop {
+.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -806,7 +947,7 @@
     padding: 72px 24px 24px 24px;
 
     transform: translate(-50%, -50%);
-    width: 408px;
+    width: 392px;
     min-height: 584px;
 
     border-radius: 4px;
@@ -817,14 +958,18 @@
 
 }
 
+@media screen and (min-width:768px) {
+    .modal {
+        width: 408px;
+    }
+}
+
 .backdrop.is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
 
-
 }
-
 
 .button-close {
     position: absolute;
@@ -1017,7 +1162,7 @@
     color: var(--white);
     background-color: var(--iris);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 
 
@@ -1097,9 +1242,6 @@
     top: 24px;
     right: 24px;
 }
-
-
-
 
 .mobile-menu .menu-link {
     font-size: 36px;
