--- a/css/styles.css
+++ b/css/styles.css
@@ -90,26 +90,20 @@
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
+        text-align: left;
     }
 }
 
 .subtitle,
 .description {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
 
     color: var(--slate);
 }
 
-@media (min-width:1158px) {
-
-    .subtitle,
-    .description {
-        font-weight: normal;
-    }
-}
 
 .section-title {
     text-align: center;
@@ -158,6 +152,12 @@
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 @media screen and (max-width:767px) {
     .header {
         padding-top: 24px;
@@ -165,13 +165,6 @@
     }
 }
 
-
-
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
 @media screen and (min-width:768px) {
     .logo {
@@ -184,6 +177,16 @@
     justify-content: center;
     align-items: center;
     gap: 40px;
+}
+
+@media screen and (max-width:767px) {
+    .menu {
+        display: none;
+    }
+
+    .contacts {
+        display: none;
+    }
 }
 
 @media screen and (max-width:767px) {
@@ -219,7 +222,7 @@
 }
 
 @media screen and (min-width:768px) and (max-width:1157px) {
-    .contacts {
+    .contacts-list {
         margin-left: auto;
         display: flex;
         flex-direction: column;
@@ -242,7 +245,7 @@
 }
 
 @media screen and (min-width:1158px) {
-    .contacts {
+    .contacts-list {
         display: flex;
         gap: 40px
     }
@@ -310,11 +313,14 @@
     }
 }
 
-
-.hero {
-    padding: 188px 0;
-    max-width: 1440px;
+@media screen and (min-width:1158px) {
+    .hero {
+        padding: 188px 0;
+        max-width: 1440px;
+    }
 }
+
+
 
 .hero-title {
     max-width: 320px;
@@ -344,8 +350,6 @@
 
 @media (min-width: 1158px) {
     .hero-title {
-        font-size: 56px;
-        line-height: 1.07;
         margin-bottom: 48px;
     }
 }
@@ -374,7 +378,6 @@
     .advantages-item:not(:last-child) {
         margin-bottom: 72px;
     }
-
 }
 
 .advantages-image {
@@ -480,9 +483,6 @@
     margin-bottom: 8px;
 }
 
-.team-position.subtitle {
-    font-weight: normal;
-}
 
 @media (max-width:767px) {
     .team-item:not(:last-child) {
@@ -524,6 +524,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     gap: 72px 16px;
 }
 
@@ -551,6 +552,7 @@
     fill: currentColor;
 }
 
+
 @media (min-width:768px) {
 
     .customers-list {
@@ -573,13 +575,6 @@
     padding-top: 96px;
     padding-bottom: 96px;
     background-color: var(--navy-blue);
-}
-
-@media(min-width:768px) {
-    .footer {
-        padding-top: 96px;
-        padding-bottom: 96px;
-    }
 }
 
 @media(min-width:1158px) {
@@ -612,7 +607,7 @@
     max-width: 268px;
     margin: 16px auto 72px;
     color: var(--cloud);
-    font-weight: normal;
+
 }
 
 @media(min-width:768px) {
@@ -670,11 +665,17 @@
 
 }
 
+.subscribe-input,
+.subscribe-input::placeholder {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
 .subscribe-input {
     background-color: transparent;
-    font-size: 12px;
     line-height: 1.5;
-    letter-spacing: 0.04em;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     width: 100%;
     height: 40px;
@@ -693,12 +694,7 @@
     }
 }
 
-.subscribe-input::placeholder {
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: rgba(255, 255, 255, 0.6);
-}
+
 
 .subscribe-button {
     display: flex;
@@ -726,9 +722,6 @@
         margin-bottom: 16px;
     }
 }
-
-
-
 
 @media (min-width:768px) {
     .footer-tablet {
@@ -792,6 +785,7 @@
 
 
 .portfolio-filter {
+    width: 268px;
     display: flex;
     flex-wrap: wrap;
     gap: 16px 24px;
@@ -799,14 +793,9 @@
 
 }
 
-@media screen and (max-width:767px) {
-    .portfolio-filter {
-        width: 268px;
-    }
-}
-
 @media screen and (min-width:768px) {
     .portfolio-filter {
+        width: 100%;
         display: flex;
         justify-content: center;
         gap: 24px;
@@ -814,7 +803,7 @@
     }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:1158px) {
     .portfolio-filter {
         margin-bottom: 72px;
     }
@@ -916,9 +905,6 @@
     text-align: left;
 }
 
-.portfolio-subtitle {
-    font-weight: 400;
-}
 
 /* ======================= End Portfolio ====================== */
 
@@ -947,7 +933,7 @@
     padding: 72px 24px 24px 24px;
 
     transform: translate(-50%, -50%);
-    width: 392px;
+    width: 100%;
     min-height: 584px;
 
     border-radius: 4px;
@@ -958,9 +944,16 @@
 
 }
 
+@media screen and (min-width:428px) {
+    .modal {
+        max-width: 408px;
+    }
+}
+
 @media screen and (min-width:768px) {
     .modal {
-        width: 408px;
+        min-width: 392px;
+        max-width: 408px;
     }
 }
 
@@ -1202,15 +1195,7 @@
 
 
 
-@media screen and (max-width:767px) {
-    .menu {
-        display: none;
-    }
 
-    .contacts {
-        display: none;
-    }
-}
 
 @media (min-width: 768px) {
     .menu-toggle {
