--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,13 +20,17 @@
     flex-wrap: wrap;
     gap: 16px 24px;
     margin-bottom: 48px;
+}
 
+@media screen and (min-width:450px) {
+    .portfolio-filter {
+        width: 100%;
+    }
 }
 
 @media screen and (min-width:768px) {
     .portfolio-filter {
         width: 100%;
-        display: flex;
         justify-content: center;
         gap: 24px;
         margin-bottom: 64px;
